<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@android:color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:id="@+id/ivImageBig"
        android:src="#af4747"
        android:scaleType="centerCrop"
        android:contentDescription="@string/imageBig"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/style_about"
        android:id="@+id/tvStyle_about"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#b2b2b2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/count_song"
        android:id="@+id/tvCountSongs_about"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#b2b2b2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bio"
        android:id="@+id/tvBio"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bio"
            android:id="@+id/tvAbout"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp" />
    </ScrollView>

</LinearLayout>