<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:id="@+id/ivImageSmall"
                android:layout_column="0"
                android:src="#af4747"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="false"
                android:layout_margin="10dp"
                android:contentDescription="@string/imageSmall" />

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="230dp"
                android:layout_height="110dp"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/title"
                    android:id="@+id/tvTitle"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/style"
                    android:id="@+id/tvStyle"
                    android:layout_below="@+id/tvTitle"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/textColorLight"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/count_song"
                    android:id="@+id/tvCountSong"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/textColorLight" />

            </RelativeLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>